--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,8 +85,9 @@ section {
   @apply w-full py-10 flex flex-col gap-10;
 
   h2 {
-    @apply text-4xl font-bold;
+    @apply text-4xl font-bold text-center;
   }
+
   h3 {
     @apply text-xl font-semibold;
   }
